@@ -1,6 +1,7 @@
 package org.spacehub.service;
 
 import lombok.RequiredArgsConstructor;
+import org.spacehub.service.Interface.INotificationService;
 import org.spacehub.DTO.Notification.NotificationRequestDTO;
 import org.spacehub.DTO.Notification.NotificationResponseDTO;
 import org.spacehub.entities.Community.Community;
@@ -9,7 +10,10 @@ import org.spacehub.entities.User.User;
 import org.spacehub.repository.NotificationRepository;
 import org.spacehub.repository.UserRepository;
 import org.spacehub.repository.community.CommunityRepository;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -18,13 +22,16 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class NotificationService {
+public class NotificationService implements INotificationService {
 
     private final NotificationRepository notificationRepository;
     private final UserRepository userRepository;
     private final CommunityRepository communityRepository;
+    private final SimpMessagingTemplate messagingTemplate;
 
+    @Override
     public void createNotification(NotificationRequestDTO request) {
+
         User recipient = userRepository.findByEmail(request.getEmail()).orElseThrow(() -> new RuntimeException("User not found: " + request.getEmail()));
 
         User sender = userRepository.findByEmail(request.getSenderEmail()).orElseThrow(() -> new RuntimeException("Sender not found: " + request.getSenderEmail()));
@@ -45,73 +52,50 @@ public class NotificationService {
                 .referenceId(request.getReferenceId())
                 .scope(request.getScope())
                 .actionable(request.isActionable())
+                .createdAt(java.time.LocalDateTime.now())
+                .read(false)
                 .build();
-
         notificationRepository.save(notification);
+
+        NotificationResponseDTO dto = mapToDTO(notification);
+
+        messagingTemplate.convertAndSend("/topic/notifications/" + request.getEmail(), dto);
     }
 
-    public List<NotificationResponseDTO> getUserNotifications(String email, String scope) {
-        List<Notification> notifications =
-                notificationRepository.findByRecipientEmailAndScopeOrderByCreatedAtDesc(email, scope);
+    @Override
+    public List<NotificationResponseDTO> getUserNotifications(String email, String scope, int page, int size) {
+        PageRequest pageable = PageRequest.of(page, size);
 
-        return notifications.stream()
-                .map(n -> NotificationResponseDTO.builder()
-                        .id(n.getId())
-                        .title(n.getTitle())
-                        .message(n.getMessage())
-                        .type(n.getType())
-                        .scope(n.getScope())
-                        .actionable(n.isActionable())
-                        .read(n.isRead())
-                        .createdAt(n.getCreatedAt())
-                        .communityId(n.getCommunity() != null ? n.getCommunity().getId() : null)
-                        .communityName(n.getCommunity() != null ? n.getCommunity().getName() : null)
-                        .referenceId(n.getReferenceId())
-                        .senderName(n.getSender() != null ? n.getSender().getUsername() : null)
-                        .senderEmail(n.getSender() != null ? n.getSender().getEmail() : null)
-                        .build()).toList();
+        List<Notification> unread = notificationRepository
+                .findByRecipientEmailAndReadFalseOrderByCreatedAtDesc(email, pageable);
+
+        List<Notification> all = new ArrayList<>(unread);
+        if (unread.size() < size) {
+            int remaining = size - unread.size();
+            List<Notification> read = notificationRepository
+                    .findByRecipientEmailAndReadTrueOrderByCreatedAtDesc(email, PageRequest.of(0, remaining));
+            all.addAll(read);
+        }
+
+        return all.stream().map(this::mapToDTO).collect(Collectors.toList());
     }
 
-    public List<NotificationResponseDTO> fetchAndMarkRead(String email) {
-        List<Notification> allNotifications = notificationRepository.findByRecipientEmailOrderByCreatedAtDesc(email);
+    @Override
+    @Transactional
+    public List<NotificationResponseDTO> fetchAndMarkRead(String email, int page, int size) {
+        List<NotificationResponseDTO> notifications = getUserNotifications(email, "global", page, size);
 
-        List<Notification> unread = allNotifications.stream()
-                .filter(notification -> !notification.isRead())
-                .collect(Collectors.toList());
-
-        List<Notification> read = allNotifications.stream()
-                .filter(Notification::isRead).toList();
-
-        List<Notification> combined = new ArrayList<>(unread);
-
-
-        combined.addAll(read);
+        List<Notification> unread = notificationRepository.findByRecipientEmailAndReadFalseOrderByCreatedAtDesc(email, PageRequest.of(0, 100));
 
         unread.forEach(n -> n.setRead(true));
         notificationRepository.saveAll(unread);
 
-        return combined.stream()
-                .map(notification -> NotificationResponseDTO.builder()
-                        .id(notification.getId())
-                        .title(notification.getTitle())
-                        .message(notification.getMessage())
-                        .type(notification.getType())
-                        .scope(notification.getScope())
-                        .actionable(notification.isActionable())
-                        .read(notification.isRead())
-                        .createdAt(notification.getCreatedAt())
-                        .communityId(notification.getCommunity() != null ? notification.getCommunity().getId() : null)
-                        .communityName(notification.getCommunity() != null ? notification.getCommunity().getName() : null)
-                        .referenceId(notification.getReferenceId())
-                        .build())
-                .collect(Collectors.toList());
+        return notifications;
     }
 
-    public void markAsRead(Long id) {
-        if (id == null) throw new IllegalArgumentException("Notification ID cannot be null");
-
-        Notification notification = notificationRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Notification not found with ID: " + id));
+    @Override
+    public void markAsRead(UUID id) {
+        Notification notification = notificationRepository.findById(id).orElseThrow(() -> new RuntimeException("Notification not found with ID: " + id));
 
         if (!notification.isRead()) {
             notification.setRead(true);
@@ -119,13 +103,36 @@ public class NotificationService {
         }
     }
 
-    public void deleteNotification(Long id) {
-        if (id == null) throw new IllegalArgumentException("Notification ID cannot be null");
-
+    @Override
+    public void deleteNotification(UUID id) {
         if (!notificationRepository.existsById(id)) {
             throw new RuntimeException("Notification not found with ID: " + id);
         }
         notificationRepository.deleteById(id);
+    }
+
+    @Override
+    public long countUnreadNotifications(String email) {
+        return notificationRepository.findByRecipientEmailOrderByCreatedAtDesc(email)
+                .stream().filter(n -> !n.isRead()).count();
+    }
+
+    private NotificationResponseDTO mapToDTO(Notification n) {
+        return NotificationResponseDTO.builder()
+                .id(n.getId())
+                .title(n.getTitle())
+                .message(n.getMessage())
+                .type(n.getType())
+                .scope(n.getScope())
+                .actionable(n.isActionable())
+                .read(n.isRead())
+                .createdAt(n.getCreatedAt())
+                .communityId(n.getCommunity() != null ? n.getCommunity().getId() : null)
+                .communityName(n.getCommunity() != null ? n.getCommunity().getName() : null)
+                .referenceId(n.getReferenceId())
+                .senderName(n.getSender() != null ? n.getSender().getUsername() : null)
+                .senderEmail(n.getSender() != null ? n.getSender().getEmail() : null)
+                .build();
     }
 
 }
